@@ -1,6 +1,7 @@
 NOCC 0.9.6	??
 
-	* Fixed a wrong url for prefs after sending a message (bug #493072)
+	* Conf is now passed as argument. It is no more included in functions.
+	* Fixed a wrong url for prefs after sending a message (bug #493072).
 	* Configuration parameters are now in an array ($conf).
 	* Speed up a bit by using ' instead of " for strings.
 	* Added Croatian translation.
